fix z-index of track handles

--- a/themes/base/scss/regionbrowser.scss
+++ b/themes/base/scss/regionbrowser.scss
@@ -117,7 +117,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 1;
+        z-index: 100;
 
         padding: 0 8px 0 20px;
         line-height: 28px;
